lg:header section completed

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,63 @@
     <link href="./output.css" rel="stylesheet" />
     <title>swahili nlp hub</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <!--content wraper-->
+      <div>
+        <nav>
+          <div>
+            <img src="" alt="logo" />
+            <h1></h1>
+          </div>
+          <ul>
+            <li>
+              <a href="#">
+                <span></span>
+              </a>
+            </li>
+            <li>
+              <a href="#"><span></span></a>
+            </li>
+            <li>
+              <a href="#"><span></span></a>
+            </li>
+            <li>
+              <a href="#"><span></span></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!--nav end-->
+
+      <main>
+        <header>
+          <div class="lg:grid lg:grid-cols-12 lg:grid-rows-3">
+            <img
+              class="lg:col-span-12 lg:row-span-2 absolute -z-10"
+              src="/img/Path.png"
+              alt=""
+            />
+            <div class="lg:flex lg:flex-col lg:items-center lg:col-span-12">
+              <h1 class="text-6xl font-bold">Building a Swahili NLP hub</h1>
+              <p class="mt-8 w-3/6 text-center">
+                A Swahili NLP hub for everyone - That is developers, data
+                scientists and everyone with no-coding experience.
+              </p>
+              <a
+                href="#"
+                class="text-sm bg-green-300 py-3 px-10 mt-8 rounded-full"
+                ><span class="font-bold">Use Cases</span> - Get Started</a
+              >
+            </div>
+            <div
+              class="lg:col-start-2 lg:col-end-12 lg:row-start-2 lg:row-end-12"
+            >
+              <img src="/img/screen1 1.png" alt="" />
+            </div>
+          </div>
+        </header>
+      </main>
+    </div>
+  </body>
 </html>
