section one is completed

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
   <body>
     <div>
       <!--content wraper-->
-
+      <!--header start-->
       <header class="grid grid-cols-12 grid-rows-4 text-white">
         <div class="-z-10 col-start-1 col-end-13 row-start-1 row-end-4">
           <img class="w-full h-full object-cover" src="/img/Path.png" alt="" />
         </div>
-
+        <!--nav start-->
         <nav
           class="grid col-start-1 col-end-13 row-start-1 row-end-1 self-start text-white"
         >
@@ -46,6 +46,7 @@
             </ul>
           </div>
         </nav>
+        <!--nav end-->
         <div
           class="grid col-start-2 col-end-12 row-start-2 row-end-2 place-self-center text-center -mt-32"
         >
@@ -65,9 +66,44 @@
         </div>
       </header>
 
-      <!--nav end-->
+      <!--header end-->
 
-      <main></main>
+      <main class="mx-8 py-28">
+        <!--section one start-->
+        <section class="">
+          <div class="grid grid-cols-2 gap-10">
+            <div>
+              <img class="w-full h-full" src="/img/Capture1.PNG" alt="" />
+            </div>
+            <div>
+              <h2 class="text-base uppercase text-green-800 mb-2">About us</h2>
+              <h3 class="text-xl font-bold mb-2">
+                Let us share with you a little bit of history.
+              </h3>
+              <p class="text-lg mb-4">
+                Fonimu was founded by a group of enthusiasts who believe NLP can
+                revolutionize access to services in Africa. This has been the
+                core of our drive. Today, we are a community solving the
+                challenging Swahili NLP problems that will impact millions of
+                people across Africa, as well as look toward the future.
+              </p>
+              <h3 class="text-base font-bold mb-2">
+                What we want to accomplish
+              </h3>
+              <p class="text-lg">
+                We’re trying to build a Swahili NLP hub, and we're doing it with
+                the hope of having a huge, positive impact in Africa. That means
+                at Fonimu, you'll find APIs for various Swahili NLP tasks,
+                pretrained models, links to Swahili datasets and you'll have an
+                opportunity to make your contributions. We want Fonimu to be the
+                easiest Swahili NLP ecosystem for developers, data scientists
+                and everyone with no-coding experience.
+              </p>
+            </div>
+          </div>
+        </section>
+        <!--section one end-->
+      </main>
     </div>
   </body>
 </html>
