--- a/src/index.html
+++ b/src/index.html
@@ -62,18 +62,18 @@
           >
         </div>
         <div class="col-start-2 col-end-12 row-start-3 row-end-5">
-          <img src="/img/screen1 1.png" alt="" />
+          <img class="w-full object-cover" src="/img/screen1 1.png" alt="" />
         </div>
       </header>
 
       <!--header end-->
 
-      <main class="mx-8 py-28">
+      <main class="mx-8 pt-20">
         <!--section one start-->
         <section class="">
           <div class="grid grid-cols-2 gap-10">
-            <div>
-              <img class="w-full h-full" src="/img/Capture1.PNG" alt="" />
+            <div class="self-center">
+              <img class="w-full" src="/img/Capture1.PNG" alt="" />
             </div>
             <div>
               <h2 class="text-base uppercase text-green-800 mb-2">About us</h2>
@@ -103,6 +103,102 @@
           </div>
         </section>
         <!--section one end-->
+        <!--section two start-->
+        <section class="py-20">
+          <div class="text-center">
+            <h1 class="text-4xl font-bold mb-4">Problems we are solving</h1>
+            <p class="mb-6">
+              The Swahili NLP problems we work on are hard, and we want as many
+              of the great minds thinking about them as possible. Below are the
+              problems we are working on;
+            </p>
+          </div>
+          <div class="grid grid-cols-2 gap-4 mb-4">
+            <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
+              <div>
+                <img class="w-56 h-11" src="/img/icon-area (5).png" alt="" />
+              </div>
+              <div>
+                <h3 class="text-xl font-bold mb-2">Text Summarisation</h3>
+                <p>
+                  The extensive generation of data and content on the internet
+                  has given rise to a need for text summarization to generate
+                  efficiency and reduce reading time. This is well demonstrated
+                  on Online magazines, research sites, and news aggregator apps
+                  that rely on short, informative summaries to keep readers
+                  interested and up to date.
+                </p>
+              </div>
+            </div>
+            <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
+              <div>
+                <img class="w-56 h-11" src="/img/icon-area (4).png" alt="" />
+              </div>
+              <div>
+                <h3 class="text-xl font-bold mb-2">Text Classification</h3>
+                <p>
+                  Text can be an extremely rich source of information, but
+                  extracting insights from it can be hard and time-consuming,
+                  due to its unstructured nature. WIth text classification a set
+                  of predefined categories can be assigned to an open-ended
+                  text. Some examples of text classification are email
+                  classification, news classification and sentiment analysis.
+                </p>
+              </div>
+            </div>
+            <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
+              <div>
+                <img class="w-64 h-11" src="/img/icon-area (3).png" alt="" />
+              </div>
+              <div>
+                <h3 class="text-xl font-bold mb-2">Named entity recognition</h3>
+                <p>
+                  Named entity recognition (NER) is being used heavily in the
+                  industries today to automate major categorization of data for
+                  unstructured text and datasets. NER seeks to locate and
+                  classify named entities in text into predefined categories
+                  such as the names of persons, organizations, locations,
+                  etc.Human resources: Speed up the hiring process by
+                  summarizing applicants’ CVs
+                </p>
+              </div>
+            </div>
+            <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
+              <div>
+                <img class="w-64 h-11" src="/img/icon-area (2).png" alt="" />
+              </div>
+              <div>
+                <h3 class="text-xl font-bold mb-2">Grammar Correction Tools</h3>
+                <p>
+                  We often encounter grammatical errors when writing an email or
+                  an imperative document. This usually causes us to spend a
+                  large amount of effort and time on finding and correcting the
+                  grammar error. Grammar Correction Tools help in minimizing
+                  mistakes in spelling, punctuation, grammar, and word choice—an
+                  area known broadly in natural language processing (NLP)
+                  research as grammatical error correction.
+                </p>
+              </div>
+            </div>
+            <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
+              <div>
+                <img class="w-56 h-11" src="/img/icon-area (1).png" alt="" />
+              </div>
+              <div>
+                <h3 class="text-xl font-bold mb-2">Text Generation</h3>
+                <p>
+                  Text generation helps in writing/producing high-quality
+                  content quickly and efficiently. Generating text provides a
+                  simple step to ensure that you can create something with as
+                  little effort as possible. Examples of text generation are;
+                  Translation, Text autocompletion, Question Answering, Code
+                  generation.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--section two end-->
       </main>
     </div>
   </body>
