--- a/src/index.html
+++ b/src/index.html
@@ -199,6 +199,87 @@
           </div>
         </section>
         <!--section two end-->
+        <!--section three start-->
+        <section class="grid grid-cols-2 items-center gap-4 pb-20">
+          <div class="">
+            <h2 class="text-base uppercase text-green-800 mb-2">Demos</h2>
+            <h1 class="text-4xl font-bold mb-4">Fonimu Use Cases</h1>
+            <p class="mb-8">
+              We are fostering some of the great work in African NLP especially
+              in Swahili. We Try some of the demos of the use cases that we have
+              been working on so far.
+            </p>
+            <div class="flex items-start justify-start">
+              <svg
+                class="w-6 mr-4 text-green-800"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+                />
+              </svg>
+
+              <a class="text-xs text-green-700" href="#">Try some Demos</a>
+            </div>
+          </div>
+          <div class="">
+            <div class="flex items-center justify-between px-4 mb-8">
+              <div>
+                <p class="text-xl">Text autocompletion</p>
+                <p class="text-xs font-bold text-green-700">
+                  swahili text autocomplete demo
+                </p>
+              </div>
+              <div class="border border-gray-400 py-2 px-4 rounded-lg">
+                <a href="#">Examples </a>
+                <svg
+                  class="inline-block h-3"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m19.5 8.25-7.5 7.5-7.5-7.5"
+                  />
+                </svg>
+              </div>
+            </div>
+            <div class="border border-gray-400 pb-16 pr-4 pl-1 pt-2 rounded-lg">
+              <div class="border border-gray-400 rounded-lg h-32">
+                <p class="ml-2">
+                  Juma alicheka kwa ngl<span class="text-green-700">uvu</span>
+                </p>
+                <div class="border border-gray-400 w-16 ml-32 rounded-lg">
+                  <p class="text-sm">ovu</p>
+                  <p>ombe</p>
+                </div>
+              </div>
+              <div class="flex justify-between">
+                <p class="mt-2">
+                  Text Generated <span class="text-green-500">: uvu</span>
+                </p>
+                <a
+                  class="px-3 py-2 bg-gray-500 text-white rounded-full mt-2"
+                  href=""
+                  >computer</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--section three end-->
       </main>
     </div>
   </body>
