section 4 is completed

--- a/src/index.html
+++ b/src/index.html
@@ -280,6 +280,51 @@
           </div>
         </section>
         <!--section three end-->
+        <!--section four start-->
+        <section class="grid grid-cols-2 items-center gap-4 pb-20">
+          <div>
+            <img class="" src="/img/Macbook.png" alt="" />
+          </div>
+          <div>
+            <div class="">
+              <h2 class="text-base uppercase text-green-800 mb-2">Datasets</h2>
+              <h1 class="text-4xl font-bold mb-4">Swahili Datasets</h1>
+              <p class="mb-4">
+                Datasets play a crucial role in developing accurate models. The
+                <br />quality and quantity of the data used impacts the model's
+                <br />
+                performance. Fonimu API leverages the use of annotated corpora,
+                <br />
+                question-answering datasets, and sentiment analysis datasets.
+              </p>
+              <span
+                >With the availability of Fonimu datasets, researchers and
+                developers <br />
+                can create new models in swahili
+              </span>
+              <div class="flex items-center justify-end">
+                <svg
+                  class="w-6 mr-4 text-green-800"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+                  />
+                </svg>
+
+                <a class="text-xs text-green-700" href="#">Try some Demos</a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--section four end-->
       </main>
     </div>
   </body>
