section 5 is comleted

--- a/src/index.html
+++ b/src/index.html
@@ -68,9 +68,9 @@
 
       <!--header end-->
 
-      <main class="mx-8 pt-20">
+      <main class="pt-20">
         <!--section one start-->
-        <section class="">
+        <section class="mx-8">
           <div class="grid grid-cols-2 gap-10">
             <div class="self-center">
               <img class="w-full" src="/img/Capture1.PNG" alt="" />
@@ -104,7 +104,7 @@
         </section>
         <!--section one end-->
         <!--section two start-->
-        <section class="py-20">
+        <section class="mx-8 py-20">
           <div class="text-center">
             <h1 class="text-4xl font-bold mb-4">Problems we are solving</h1>
             <p class="mb-6">
@@ -200,7 +200,7 @@
         </section>
         <!--section two end-->
         <!--section three start-->
-        <section class="grid grid-cols-2 items-center gap-4 pb-20">
+        <section class="mx-8 grid grid-cols-2 items-center gap-4 pb-20">
           <div class="">
             <h2 class="text-base uppercase text-green-800 mb-2">Demos</h2>
             <h1 class="text-4xl font-bold mb-4">Fonimu Use Cases</h1>
@@ -281,7 +281,7 @@
         </section>
         <!--section three end-->
         <!--section four start-->
-        <section class="grid grid-cols-2 items-center gap-4 pb-20">
+        <section class="mx-8 grid grid-cols-2 items-center gap-4 pb-20">
           <div>
             <img class="" src="/img/Macbook.png" alt="" />
           </div>
@@ -325,6 +325,167 @@
           </div>
         </section>
         <!--section four end-->
+        <!--section five start-->
+        <section class="py-20 bg-gray-300">
+          <h1 class="text-4xl font-bold mb-8 text-center">
+            Frequently Asked Questions
+          </h1>
+          <div class="grid grid-cols-2 gap-4 px-8">
+            <div
+              class="bg-white rounded flex items-center justify-between px-2 py-4"
+            >
+              <p>How does a Fonimu work?</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m19.5 8.25-7.5 7.5-7.5-7.5"
+                />
+              </svg>
+            </div>
+            <div
+              class="bg-white rounded flex items-center justify-between px-2 py-4"
+            >
+              <p>Lorem ipsum dolor sit amet?</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m19.5 8.25-7.5 7.5-7.5-7.5"
+                />
+              </svg>
+            </div>
+            <div
+              class="bg-white rounded flex items-center justify-between px-2 py-4"
+            >
+              <p>What are the features of Fonimu</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m19.5 8.25-7.5 7.5-7.5-7.5"
+                />
+              </svg>
+            </div>
+            <div
+              class="bg-white rounded flex items-center justify-between px-2 py-4"
+            >
+              <p>Is Fonimu free?</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m19.5 8.25-7.5 7.5-7.5-7.5"
+                />
+              </svg>
+            </div>
+            <div
+              class="bg-white rounded flex items-center justify-between px-2 py-4"
+            >
+              <p>Lorem ipsum dolor sit amet consectetur. Id.</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m19.5 8.25-7.5 7.5-7.5-7.5"
+                />
+              </svg>
+            </div>
+            <div
+              class="bg-white rounded flex items-center justify-between px-2 py-4"
+            >
+              <p>Lorem ipsum dolor sit amet?</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m19.5 8.25-7.5 7.5-7.5-7.5"
+                />
+              </svg>
+            </div>
+            <div
+              class="bg-white rounded flex items-center justify-between px-2 py-4"
+            >
+              <p>Odio phasellus nulla aliquam nec amet ?</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m19.5 8.25-7.5 7.5-7.5-7.5"
+                />
+              </svg>
+            </div>
+            <div
+              class="bg-white rounded flex items-center justify-between px-2 py-4"
+            >
+              <p>nulla aliquam nec amet</p>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m19.5 8.25-7.5 7.5-7.5-7.5"
+                />
+              </svg>
+            </div>
+          </div>
+        </section>
+        <!--section five end-->
       </main>
     </div>
   </body>
