--- a/src/index.html
+++ b/src/index.html
@@ -486,6 +486,81 @@
           </div>
         </section>
         <!--section five end-->
+        <!--section six start-->
+        <section class="grid grid-cols-2 gap-4 mx-8 py-20">
+          <div>
+            <img src="/img/illustration.png" alt="" />
+          </div>
+          <div class="">
+            <div class="mb-8">
+              <h1 class="uppercase text-base font-bold mb-1">Any questions?</h1>
+              <h2 class="text-5xl font-bold">Drop us a line</h2>
+            </div>
+            <div class="mb-5">
+              <div class="grid grid-cols-2 gap-4 mb-4">
+                <div>
+                  <p class="mb-2 text-gray-500">First Name*</p>
+                  <input
+                    class="w-full p-2 border border-gray-300 rounded outline-none"
+                    type="text"
+                    placeholder="Your first name"
+                  />
+                </div>
+                <div>
+                  <p class="mb-2 text-gray-500">Last Name*</p>
+                  <input
+                    class="w-full p-2 border border-gray-300 rounded outline-none"
+                    type="text"
+                    placeholder="Your last name"
+                  />
+                </div>
+                <div>
+                  <p class="mb-2 text-gray-500">Email*</p>
+                  <input
+                    class="w-full p-2 border border-gray-300 rounded outline-none"
+                    type="text"
+                    placeholder="Your Email Address"
+                  />
+                </div>
+                <div>
+                  <p class="mb-2 text-gray-500">Phone*</p>
+                  <input
+                    class="w-full p-2 border border-gray-300 rounded outline-none"
+                    type="text"
+                    placeholder="Your phone number"
+                  />
+                </div>
+              </div>
+              <div>
+                <p class="mb-2 text-gray-500">Message*</p>
+                <input
+                  class="pt-2 pb-20 pl-2 border border-gray-300 w-full outline-none rounded"
+                  type="text"
+                  placeholder="Your massage"
+                />
+              </div>
+            </div>
+            <div class="grid grid-cols-3 items-center justify-start">
+              <div class="mr-8 sm:mr-0 sm:w-max">
+                <input type="checkbox" />
+              </div>
+              <div class="-ml-44 sm:-ml-36 sm:w-max">
+                <p class="text-base">
+                  I agree to receive communications from Fonimu
+                </p>
+              </div>
+
+              <div class="justify-self-end">
+                <a
+                  class="text-base text-white px-4 py-2 rounded bg-green-700"
+                  href="#"
+                  >Send Message</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--section six end-->
       </main>
     </div>
   </body>
