--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
               problems we are working on;
             </p>
           </div>
-          <div class="grid grid-cols-2 gap-4 mb-4">
+          <div class="grid lg:grid-cols-2 gap-4 mb-4">
             <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
               <div>
                 <img class="w-56 h-11" src="/img/icon-area (5).png" alt="" />
