--- a/src/index.html
+++ b/src/index.html
@@ -224,7 +224,9 @@
         </section>
         <!--section two end-->
         <!--section three start-->
-        <section class="mx-8 grid grid-cols-2 items-center gap-4 pb-20">
+        <section
+          class="mx-8 grid lg:grid-cols-2 items-center lg:gap-4 pb-20 gap-10"
+        >
           <div class="">
             <h2 class="text-base uppercase text-green-800 mb-2">Demos</h2>
             <h1 class="text-4xl font-bold mb-4">Fonimu Use Cases</h1>
