sm for section four is completed

--- a/src/index.html
+++ b/src/index.html
@@ -307,7 +307,9 @@
         </section>
         <!--section three end-->
         <!--section four start-->
-        <section class="mx-8 grid grid-cols-2 items-center gap-4 pb-20">
+        <section
+          class="mx-8 grid lg:grid-cols-2 items-center lg:gap-4 pb-20 gap-10"
+        >
           <div>
             <img class="" src="/img/Macbook.png" alt="" />
           </div>
@@ -328,7 +330,7 @@
                 developers <br />
                 can create new models in swahili
               </span>
-              <div class="flex items-center justify-end">
+              <div class="flex items-center lg:justify-end mt-4">
                 <svg
                   class="w-6 mr-4 text-green-800"
                   xmlns="http://www.w3.org/2000/svg"
