--- a/src/index.html
+++ b/src/index.html
@@ -358,7 +358,7 @@
           <h1 class="text-4xl font-bold mb-8 text-center">
             Frequently Asked Questions
           </h1>
-          <div class="grid grid-cols-2 gap-4 px-8">
+          <div class="grid lg:grid-cols-2 gap-4 px-8">
             <div
               class="bg-white rounded flex items-center justify-between px-2 py-4"
             >
