sm for section six is completed

--- a/src/index.html
+++ b/src/index.html
@@ -515,7 +515,7 @@
         </section>
         <!--section five end-->
         <!--section six start-->
-        <section class="grid grid-cols-2 gap-4 mx-8 py-20">
+        <section class="grid lg:grid-cols-2 lg:gap-4 mx-8 py-20 gap-10">
           <div>
             <img src="/img/illustration.png" alt="" />
           </div>
