sm for footer section is completed

--- a/src/index.html
+++ b/src/index.html
@@ -591,9 +591,9 @@
         <!--section six end-->
         <!--section footer start-->
         <footer
-          class="md:flex md:justify-between mx-8 py-5 border-t border-gray-300 sm:flex-row"
+          class="flex justify-center mx-8 py-5 border-t border-gray-300 md:justify-between flex-col md:flex-row place-items-center gap-10"
         >
-          <div class="flex flex-col gap-4">
+          <div class="flex flex-col gap-4 items-center justify-items-center">
             <div class="flex items-center">
               <img class="h-5" src="/img/g52.png" alt="logo" />
               <span class="text-lg font-bold ml-1">Fonimu</span>
@@ -605,7 +605,7 @@
               <img src="/img/025-messenger.png" alt="messenger" />
             </div>
           </div>
-          <div class="flex gap-20">
+          <div class="lg:flex gap-20 sm:grid grid-cols-2">
             <div>
               <h1 class="font-bold mb-4">Company</h1>
               <p class="text-sm mb-4">About Us</p>
