centering of the footer is done

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,6 @@
           <img class="w-full object-cover" src="/img/screen1 1.png" alt="" />
         </div>
       </header>
-
       <!--header end-->
 
       <main class="pt-5">
@@ -515,7 +514,9 @@
         </section>
         <!--section five end-->
         <!--section six start-->
-        <section class="grid lg:grid-cols-2 lg:gap-4 mx-8 py-20 gap-10">
+        <section
+          class="grid lg:grid-cols-2 grid-cols-1 lg:gap-4 mx-8 py-20 gap-10"
+        >
           <div>
             <img src="/img/illustration.png" alt="" />
           </div>
@@ -605,7 +606,7 @@
               <img src="/img/025-messenger.png" alt="messenger" />
             </div>
           </div>
-          <div class="lg:flex gap-20 sm:grid grid-cols-2">
+          <div class="lg:flex gap-20 sm:grid grid-cols-2 justify-items-center">
             <div>
               <h1 class="font-bold mb-4">Company</h1>
               <p class="text-sm mb-4">About Us</p>
