responsive nav for sm is done

--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,19 @@
       <!--content wraper-->
       <!--header start-->
       <header
-        class="md:grid md:grid-cols-12 md:grid-rows-4 text-white sm:grid-rows-3"
+        class="text-white bg-fixed h-headerh"
+        style="background-image: url(/img/Path.png)"
       >
-        <div
-          class="-z-10 md:col-start-1 md:col-end-13 md:row-start-1 md:row-end-4 sm:row-end-3"
-        >
-          <img class="w-full h-full object-cover" src="/img/Path.png" alt="" />
-        </div>
         <!--nav start-->
-        <nav
-          class="md:grid col-start-1 md:col-end-13 md:row-start-1 md:row-end-1 self-start text-white"
-        >
-          <div class="md:grid md:grid-cols-2 p-8 sm:grid-cols-1">
-            <div class="flex items-center w-full">
-              <img class="h-5" src="/img/Group 1.png" alt="logo" />
-              <h1 class="ml-2 text-2xl">Fonimu</h1>
-              <div class="ml-auto cursor-pointer md:hidden">
+        <nav class="text-white">
+          <div class="flex items-center justify-between p-8">
+            <div class="flex items-center justify-between sm:w-full md:w-max">
+              <div class="flex items-center">
+                <img class="h-5" src="/img/Group 1.png" alt="logo" />
+                <h1 class="ml-2 text-2xl">Fonimu</h1>
+              </div>
+
+              <div class="cursor-pointer md:hidden">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
@@ -43,55 +40,56 @@
                 </svg>
               </div>
             </div>
-            <ul
-              class="md:flex justify-between text-white text-xl hidden md:block"
-            >
-              <li>
-                <a href="#">
-                  <span>Home</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <span>Use Cases</span>
-                </a>
-              </li>
-              <li>
-                <a href="#"><span>Demo</span></a>
-              </li>
-              <li>
-                <a href="#"><span>Datasets</span></a>
-              </li>
-              <li>
-                <a href="#"><span>Contact Us</span></a>
-              </li>
-            </ul>
+            <div class="sm:hidden md:block">
+              <ul class="flex text-white text-xl">
+                <li class="mr-8">
+                  <a href="#">
+                    <span>Home</span>
+                  </a>
+                </li>
+                <li class="mr-8">
+                  <a href="#">
+                    <span>Use Cases</span>
+                  </a>
+                </li>
+                <li class="mr-8">
+                  <a href="#"><span>Demo</span></a>
+                </li>
+                <li class="mr-8">
+                  <a href="#"><span>Datasets</span></a>
+                </li>
+                <li>
+                  <a href="#"><span>Contact Us</span></a>
+                </li>
+              </ul>
+            </div>
           </div>
         </nav>
         <!--nav end-->
-        <div
-          class="grid col-start-2 col-end-12 row-start-2 row-end-2 place-self-center text-center -mt-32"
-        >
+        <div class="text-center">
           <h1 class="text-6xl font-bold">Building a Swahili NLP hub</h1>
-          <p class="mt-8 w-4/6 place-self-center text-xl">
+          <p class="mt-8 place-self-center text-xl">
             A Swahili NLP hub for everyone - That is developers, data scientists
-            and everyone with no-coding experience.
+            and <br />
+            everyone with no-coding experience.
           </p>
           <a
             href="#"
-            class="w-max text-sm bg-green-300 py-3 px-10 mt-8 rounded-full place-self-center"
+            class="inline-block mt-8 text-sm bg-green-300 py-3 px-10 rounded-full"
             ><span class="font-bold">Use Cases</span> - Get Started</a
           >
         </div>
-        <div
-          class="col-start-2 col-end-12 row-start-3 row-end-5 sm:hidden md:block"
-        >
-          <img class="w-full object-cover" src="/img/screen1 1.png" alt="" />
+        <div class="relative">
+          <img
+            class="absolute mt-4 w-full object-cover"
+            src="/img/screen1 1.png"
+            alt=""
+          />
         </div>
       </header>
       <!--header end-->
 
-      <main class="pt-5">
+      <main class="pt-72">
         <!--section one start-->
         <section class="mx-8">
           <div class="md:grid md:grid-cols-2 md:gap-10 sm:grid-cols-1">
