responsive for the web is done

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <!--content wraper-->
       <!--header start-->
       <header
-        class="text-white bg-fixed h-headerh"
+        class="text-white bg-fixed md:h-headerh sm:h-max sm:pb-20"
         style="background-image: url(/img/Path.png)"
       >
         <!--nav start-->
@@ -66,11 +66,13 @@
           </div>
         </nav>
         <!--nav end-->
-        <div class="text-center">
-          <h1 class="text-6xl font-bold">Building a Swahili NLP hub</h1>
-          <p class="mt-8 place-self-center text-xl">
-            A Swahili NLP hub for everyone - That is developers, data scientists
-            and <br />
+        <div class="text-center px-6">
+          <h1 class="md:text-6xl font-bold sm:text-5xl">
+            Building a Swahili NLP hub
+          </h1>
+          <p class="mt-8 text-sm">
+            A Swahili NLP hub for esm:veryone - That is developers, data
+            scientists and <br />
             everyone with no-coding experience.
           </p>
           <a
@@ -79,7 +81,7 @@
             ><span class="font-bold">Use Cases</span> - Get Started</a
           >
         </div>
-        <div class="relative">
+        <div class="relative hidden md:block">
           <img
             class="absolute mt-4 w-full object-cover"
             src="/img/screen1 1.png"
@@ -89,7 +91,7 @@
       </header>
       <!--header end-->
 
-      <main class="pt-72">
+      <main class="lg:pt-72 md:pt-60 sm:pt-20">
         <!--section one start-->
         <section class="mx-8">
           <div class="md:grid md:grid-cols-2 md:gap-10 sm:grid-cols-1">
