the font size of the paragraph in the header was changed

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
           <h1 class="md:text-6xl font-bold sm:text-5xl">
             Building a Swahili NLP hub
           </h1>
-          <p class="mt-8 text-sm">
+          <p class="mt-8 md:text-lg sm:text-sm">
             A Swahili NLP hub for esm:veryone - That is developers, data
             scientists and <br />
             everyone with no-coding experience.
