changing the path of the images

--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
       <!--header start-->
       <header
         class="text-white bg-fixed md:h-headerh sm:h-max sm:pb-20"
-        style="background-image: url(/img/Path.png)"
+        style="background-image: url(/src/img/Path.png)"
       >
         <!--nav start-->
         <nav class="text-white">
           <div class="flex items-center justify-between p-8">
             <div class="flex items-center justify-between sm:w-full md:w-max">
               <div class="flex items-center">
-                <img class="h-5" src="/img/Group 1.png" alt="logo" />
+                <img class="h-5" src="/src/img/Group 1.png" alt="logo" />
                 <h1 class="ml-2 text-2xl">Fonimu</h1>
               </div>
 
@@ -84,7 +84,7 @@
         <div class="relative hidden md:block">
           <img
             class="absolute mt-4 w-full object-cover"
-            src="/img/screen1 1.png"
+            src="/src/img/screen1 1.png"
             alt=""
           />
         </div>
@@ -96,7 +96,7 @@
         <section class="mx-8">
           <div class="md:grid md:grid-cols-2 md:gap-10 sm:grid-cols-1">
             <div class="self-center">
-              <img class="w-full" src="/img/Capture1.PNG" alt="" />
+              <img class="w-full" src="/src/img/Capture1.PNG" alt="" />
             </div>
             <div class="sm:mt-10">
               <h2 class="text-base uppercase text-green-800 mb-2">About us</h2>
@@ -139,7 +139,11 @@
           <div class="grid lg:grid-cols-2 gap-4 mb-4">
             <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
               <div>
-                <img class="w-56 h-11" src="/img/icon-area (5).png" alt="" />
+                <img
+                  class="w-56 h-11"
+                  src="/src/img/icon-area (5).png"
+                  alt=""
+                />
               </div>
               <div>
                 <h3 class="text-xl font-bold mb-2">Text Summarisation</h3>
@@ -155,7 +159,11 @@
             </div>
             <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
               <div>
-                <img class="w-56 h-11" src="/img/icon-area (4).png" alt="" />
+                <img
+                  class="w-56 h-11"
+                  src="/src/img/icon-area (4).png"
+                  alt=""
+                />
               </div>
               <div>
                 <h3 class="text-xl font-bold mb-2">Text Classification</h3>
@@ -171,7 +179,11 @@
             </div>
             <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
               <div>
-                <img class="w-64 h-11" src="/img/icon-area (3).png" alt="" />
+                <img
+                  class="w-64 h-11"
+                  src="/src/img/icon-area (3).png"
+                  alt=""
+                />
               </div>
               <div>
                 <h3 class="text-xl font-bold mb-2">Named entity recognition</h3>
@@ -188,7 +200,11 @@
             </div>
             <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
               <div>
-                <img class="w-64 h-11" src="/img/icon-area (2).png" alt="" />
+                <img
+                  class="w-64 h-11"
+                  src="/src/img/icon-area (2).png"
+                  alt=""
+                />
               </div>
               <div>
                 <h3 class="text-xl font-bold mb-2">Grammar Correction Tools</h3>
@@ -205,7 +221,11 @@
             </div>
             <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
               <div>
-                <img class="w-56 h-11" src="/img/icon-area (1).png" alt="" />
+                <img
+                  class="w-56 h-11"
+                  src="/src/img/icon-area (1).png"
+                  alt=""
+                />
               </div>
               <div>
                 <h3 class="text-xl font-bold mb-2">Text Generation</h3>
@@ -310,7 +330,7 @@
           class="mx-8 grid lg:grid-cols-2 items-center lg:gap-4 pb-20 gap-10"
         >
           <div>
-            <img class="" src="/img/Macbook.png" alt="" />
+            <img class="" src="/src/img/Macbook.png" alt="" />
           </div>
           <div>
             <div class="">
@@ -518,7 +538,7 @@
           class="grid lg:grid-cols-2 grid-cols-1 lg:gap-4 mx-8 py-20 gap-10"
         >
           <div>
-            <img src="/img/illustration.png" alt="" />
+            <img src="/src/img/illustration.png" alt="" />
           </div>
           <div class="">
             <div class="mb-8">
@@ -596,14 +616,14 @@
         >
           <div class="flex flex-col gap-4 items-center justify-items-center">
             <div class="flex items-center">
-              <img class="h-5" src="/img/g52.png" alt="logo" />
+              <img class="h-5" src="/src/img/g52.png" alt="logo" />
               <span class="text-lg font-bold ml-1">Fonimu</span>
             </div>
             <p class="text-sm">A Swahili NLP hub for everyone -</p>
             <div class="flex items-center justify-between w-24">
-              <img src="/img/052-linkedin.png" alt="linkedin" />
-              <img src="/img/096-twitter.png" alt="twitter" />
-              <img src="/img/025-messenger.png" alt="messenger" />
+              <img src="/src/img/052-linkedin.png" alt="linkedin" />
+              <img src="/src/img/096-twitter.png" alt="twitter" />
+              <img src="/src/img/025-messenger.png" alt="messenger" />
             </div>
           </div>
           <div class="lg:flex gap-20 sm:grid grid-cols-2 justify-items-center">
