responsive for header is done

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,12 @@
             <div class="flex items-center justify-between sm:w-full md:w-max">
               <div class="flex items-center">
                 <img class="h-5" src="/src/img/Group 1.png" alt="logo" />
-                <h1 class="ml-2 text-2xl">Fonimu</h1>
+                <h1 class="ml-2 text-2xl font-bold">Fonimu</h1>
               </div>
 
-              <div class="cursor-pointer md:hidden">
+              <div
+                class="cursor-pointer md:hidden p-2 rounded-full bg-[#2E6D64]"
+              >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
@@ -41,10 +43,10 @@
               </div>
             </div>
             <div class="sm:hidden md:block">
-              <ul class="flex text-white text-xl">
-                <li class="mr-8">
-                  <a href="#">
-                    <span>Home</span>
+              <ul class="flex text-white text-base font-light">
+                <li class="mr-8 text-base">
+                  <a class="text-base" href="#">
+                    <span class="font-bold">Home</span>
                   </a>
                 </li>
                 <li class="mr-8">
@@ -66,24 +68,21 @@
           </div>
         </nav>
         <!--nav end-->
-        <div class="text-center px-6">
-          <h1 class="md:text-6xl font-bold sm:text-5xl">
-            Building a Swahili NLP hub
-          </h1>
-          <p class="mt-8 md:text-lg sm:text-sm">
-            A Swahili NLP hub for esm:veryone - That is developers, data
-            scientists and <br />
-            everyone with no-coding experience.
+        <div class="text-center px-6 mx-auto mt-14">
+          <h1 class="text-4xl font-bold">Building a Swahili NLP hub</h1>
+          <p class="mx-auto mt-8 text-xl lg:w-1/2 md:w-11/12">
+            A Swahili NLP hub for everyone - That is developers, data scientists
+            and everyone with no-coding experience.
           </p>
           <a
             href="#"
-            class="inline-block mt-8 text-sm bg-green-300 py-3 px-10 rounded-full"
+            class="inline-block mt-8 text-sm bg-[#2E6D64] py-3 px-10 rounded-full md:w-max sm:w-9/12"
             ><span class="font-bold">Use Cases</span> - Get Started</a
           >
         </div>
         <div class="relative hidden md:block">
           <img
-            class="absolute mt-4 w-full object-cover"
+            class="absolute mt-4 w-full object-cover p-4"
             src="/src/img/screen1 1.png"
             alt=""
           />
